# dztestcalculator

./: CMakeLists.txt  ICalculator.h  IHistory.h  InMemoryHistory.cpp  Project2.vcxproj  Project2.vcxproj.filters  README.md  main.cpp
tests/: CalculatorTest.cpp  CalculatorTest.vcxproj  InMemoryHistory.h  SimpleCalculator.h
x64/Debug/: Project2.exe.recipe  Project2.ilk  vc143.idb
x64/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
